# uzayan

./: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
src/: Main.ts  main.ts
src-tauri/: Cargo.toml  Settings.css  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/icons/: README.md
src-tauri/resources/lang/: en.lang
src-tauri/resources/lang/en/: settings.lang.json
src-tauri/resources/settings/: app.settings.json  apperance.settings.json
src-tauri/src/: file.rs  file_in.rs  file_out.rs  frontend.rs  main.rs  main_stream.rs  progress.rs  remote_input.rs  socket.rs  tcp.rs  tools.rs  udp.rs  udp_socket.rs
src-tauri/src/file_transfer/: mod.rs  receive.rs  send.rs
src-tauri/src/socket/: main_stream.rs  mod.rs  tls_client_connection.rs
src-tauri/src/stream/: mod.rs
src/assets/: README.md  app.svg.ts  connection_state.svg.ts  file.svg.ts  header.svg.ts  io.svg.ts  notification.svg.ts  session.svg.ts
src/connection/: ConnectionState.ts  Socket.ts  socket.ts
src/data/: settings.ts
src/managers/: DialogManager.ts  FileManager.ts  FileTransferManager.ts  HeaderManager.ts  IOProgressManager.ts  ImageManager.ts  MediaSessionManager.ts  NotificationManager.ts  TabsManager.ts  WindowManager.ts
src/scripts/: DialogManager.ts  FileManager.ts  FileTabManager.ts  FileTransferManager.ts  HeaderManager.ts  IOManager.ts  ImageManager.ts  MediaSessionManager.ts  MediasSessionManager.ts  NotificationManager.ts  OptionsManager.ts  Public.ts  Settings.ts  TabsManager.ts  WindowLayout.ts  WindowLayoutManager.ts  windowLayout.ts
src/styles/: Body.style.css  Connection.style.css  Dialog.style.css  File.style.css  Header.style.css  IO.style.css  Image.style.css  Main.style.css  MediaSession.style.css  Notification.style.css  Options.style.css  Tabs.style.css
src/types/: AndroidTypes.ts  Callbacks.ts  ConnectionObject.ts  File.ts  FileRequest.ts  ImageThumbnail.ts  ListenerMethods.ts  MediaSession.ts  (+2 more)
(+35 files in other folders)
