[package]
name = "uzayan"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
json = "0.12.4"
lazy_static = "1.4.0"
if-addrs = "0.8.0"
whoami = "1.4.0"
rcgen = "0.11.1"
time = "0.3.23"
rustls = { version = "0.21.5", features = ["dangerous_configuration"] }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
